# django-project-default

./: .dockerignore  .env.sample  .envrc.sample  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Pipfile  README.md  docker-compose.prd.yaml  docker-compose.yaml  pyproject.toml
config/: context_processors.py  drf.py  middleware.py  routing.py  settings.py  storage.py  urls.py
config/settings/: aws.py  base.py  development.py  production.py
main/: admin.py  constants.py  consumers.py  env.py  errors.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
main/forms/: __init__.py  signin.py  signup.py
main/helpers/: __init__.py  jwt.py  stripe.py  twitter.py
main/migrations/: 0001_initial.py  0002_user_icon.py  0003_authdigit_passwordresettoken.py  0003_auto_20210913_0018.py  0003_tag_tweet.py  0003_user_device_uuid.py  0004_auto_20191217_1832.py  0004_auto_20221104_0114.py  0005_logininvalid.py  0006_user_email_confirmed.py  0007_image.py  0008_auto_20221107_0050.py
main/models/: __init__.py  _base.py  auth.py  image.py  tweet.py  user.py
main/serializers/: __init__.py  digit.py  image.py  name.py  password.py  tweet.py  user.py
main/tests/: __init__.py
main/utils/: __init__.py  doc2vec.py  hls.py  html.py  image.py  mecab.py  openai.py  slack.py  twitter.py
main/views/: __init__.py  api.py  auth.py  confirm.py  image.py  password.py  (+2 more)
sample/: base64.txt
shells/: daphne.sh  makeapp.sh  makedebuguser.sh  makemigrations_and_migrate.sh  setup_production_server.sh
tag/: admin.py
tweet/: admin.py  urls.py
web/: urls.py
(+77 files in other folders)
